--- a/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
+++ b/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "'[\"Activities & Behaviors\", \"Anatomy\", \"Anatomy;Chemicals & Drugs\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Genes & Molecular Sequences;Chemicals & Drugs\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Objects;Chemicals & Drugs\", \"Occupations\", \"Organizations\", \"Organizations;Objects\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
+       "'[\"Activities & Behaviors\", \"Anatomy\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Chemicals & Drugs;Anatomy\", \"Chemicals & Drugs;Genes & Molecular Sequences\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Objects;Organizations\", \"Occupations\", \"Organizations\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
       ]
      },
      "execution_count": 8,
