add impact factor and update code for paper revision

--- a/stage_2_triple_processing/process_semrep_triples.ipynb
+++ b/stage_2_triple_processing/process_semrep_triples.ipynb
@@ -169,7 +169,7 @@
      "text": [
       "After cleaning data:\n",
       "number of nodes = 50182\n",
-      "number of unique relationship types = 64\n",
+      "number of unique relationship types = 31\n",
       "number of unique edges (includes all edge properties) = 918936\n",
       "number of unique triples = 373327\n",
       "number of unique paper IDs = 208107\n"
@@ -182,7 +182,8 @@
     "nodes = set(kg_df[subj_col]).union(set(kg_df[obj_col]))\n",
     "print(\"number of nodes =\", len(nodes))\n",
     "rels = set(kg_df[rel_col])\n",
-    "print(\"number of unique relationship types =\", len(rels))\n",
+    "rels_standardized = set([r.replace('(SPEC)', \"\").replace('(INFER)', \"\") for r in rels])\n",
+    "print(\"number of unique relationship types =\", len(rels_standardized))\n",
     "print(\"number of unique edges (includes all edge properties) =\", len(kg_df))\n",
     "num_relationships = len(kg_df.groupby([subj_col, rel_col, obj_col]).count())\n",
     "print(\"number of unique triples =\", num_relationships)\n",
@@ -347,7 +348,7 @@
      "output_type": "stream",
      "text": [
       "There are 23 coronavirus-related terms (preferred name after normalizing COVID-19 and SARS-CoV-2)\n",
-      "{'SARS-CoV-2 related virus', 'COVID-19 treatment', 'Severe COVID-19', 'COVID-19 country', 'SARS-CoV-2 spread', 'COVID-19 re-infection', 'COVID-19 patient', 'COVID-19 suspected', 'SARS-CoV-2 gene', 'COVID-19 testing', 'COVID-19 symptom', 'SARS-CoV-2', 'COVID-19 animal', 'COVID-19 acquired infection', 'COVID-19', 'SARS-CoV-2 antibody', 'SARS-CoV-2 protein', 'Asymptomatic COVID-19', 'SARS-CoV-2 PCR', 'COVID-19 vaccine', 'COVID-19 co-infection', 'COVID-19 related infection', 'COVID-19 subject'}\n"
+      "{'COVID-19', 'SARS-CoV-2 related virus', 'SARS-CoV-2', 'SARS-CoV-2 protein', 'SARS-CoV-2 spread', 'COVID-19 patient', 'SARS-CoV-2 antibody', 'COVID-19 co-infection', 'COVID-19 testing', 'COVID-19 related infection', 'COVID-19 re-infection', 'Severe COVID-19', 'COVID-19 treatment', 'SARS-CoV-2 gene', 'COVID-19 vaccine', 'COVID-19 suspected', 'COVID-19 country', 'COVID-19 symptom', 'COVID-19 subject', 'COVID-19 acquired infection', 'Asymptomatic COVID-19', 'COVID-19 animal', 'SARS-CoV-2 PCR'}\n"
      ]
     }
    ],
@@ -594,20 +595,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:11: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# update headers\n",
     "kg_df = kg_df_sent\n",
@@ -617,7 +605,7 @@
     "header_updated = [id_col_1, identifier_col_1, type_col_1, info_col_1, 'start1', 'end1',\n",
     "                  id_col_2, identifier_col_2, type_col_2, info_col_2, 'start2', 'end2',\n",
     "                  rel_col, 'startr', 'endr', 'text_id', weight_col]\n",
-    "kg_df = kg_df[header]\n",
+    "kg_df = kg_df.loc[:,header]\n",
     "kg_df.columns = header_updated\n",
     "kg_df[source_col] = 'CORD-19'"
    ]
@@ -651,6 +639,23 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique nodes: 21694\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of unique nodes:', len(set(node_id_mapping_df[id_col])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# update the node information in the triples\n",
@@ -660,12 +665,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# saved the processed triples\n",
     "kg_df.to_csv(OUTPUT_FILE_PATH, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id1</th>\n",
+       "      <th>start1</th>\n",
+       "      <th>end1</th>\n",
+       "      <th>id2</th>\n",
+       "      <th>start2</th>\n",
+       "      <th>end2</th>\n",
+       "      <th>:TYPE</th>\n",
+       "      <th>startr</th>\n",
+       "      <th>endr</th>\n",
+       "      <th>text_id</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>evidence_source</th>\n",
+       "      <th>info1</th>\n",
+       "      <th>type1</th>\n",
+       "      <th>identifier1</th>\n",
+       "      <th>info2</th>\n",
+       "      <th>type2</th>\n",
+       "      <th>identifier2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Diagnosis</td>\n",
+       "      <td>465</td>\n",
+       "      <td>474</td>\n",
+       "      <td>Patients</td>\n",
+       "      <td>552</td>\n",
+       "      <td>560</td>\n",
+       "      <td>ADMINISTERED_TO</td>\n",
+       "      <td>534</td>\n",
+       "      <td>544</td>\n",
+       "      <td>0</td>\n",
+       "      <td>136</td>\n",
+       "      <td>CORD-19</td>\n",
+       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>Procedures</td>\n",
+       "      <td>C0011900</td>\n",
+       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>Living Beings</td>\n",
+       "      <td>C0030705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Diagnosis</td>\n",
+       "      <td>103</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Patients</td>\n",
+       "      <td>24</td>\n",
+       "      <td>32</td>\n",
+       "      <td>ADMINISTERED_TO</td>\n",
+       "      <td>82</td>\n",
+       "      <td>91</td>\n",
+       "      <td>1</td>\n",
+       "      <td>136</td>\n",
+       "      <td>CORD-19</td>\n",
+       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>Procedures</td>\n",
+       "      <td>C0011900</td>\n",
+       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>Living Beings</td>\n",
+       "      <td>C0030705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Diagnosis</td>\n",
+       "      <td>99</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Patients</td>\n",
+       "      <td>186</td>\n",
+       "      <td>194</td>\n",
+       "      <td>ADMINISTERED_TO</td>\n",
+       "      <td>168</td>\n",
+       "      <td>178</td>\n",
+       "      <td>2</td>\n",
+       "      <td>136</td>\n",
+       "      <td>CORD-19</td>\n",
+       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>Procedures</td>\n",
+       "      <td>C0011900</td>\n",
+       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>Living Beings</td>\n",
+       "      <td>C0030705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Diagnosis</td>\n",
+       "      <td>213</td>\n",
+       "      <td>222</td>\n",
+       "      <td>Patients</td>\n",
+       "      <td>185</td>\n",
+       "      <td>193</td>\n",
+       "      <td>ADMINISTERED_TO</td>\n",
+       "      <td>194</td>\n",
+       "      <td>203</td>\n",
+       "      <td>3</td>\n",
+       "      <td>136</td>\n",
+       "      <td>CORD-19</td>\n",
+       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>Procedures</td>\n",
+       "      <td>C0011900</td>\n",
+       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>Living Beings</td>\n",
+       "      <td>C0030705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Diagnosis</td>\n",
+       "      <td>51</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Patients</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>ADMINISTERED_TO</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>4</td>\n",
+       "      <td>136</td>\n",
+       "      <td>CORD-19</td>\n",
+       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>Procedures</td>\n",
+       "      <td>C0011900</td>\n",
+       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>Living Beings</td>\n",
+       "      <td>C0030705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id1  start1  end1       id2  start2  end2            :TYPE  startr  \\\n",
+       "0  Diagnosis     465   474  Patients     552   560  ADMINISTERED_TO     534   \n",
+       "1  Diagnosis     103   112  Patients      24    32  ADMINISTERED_TO      82   \n",
+       "2  Diagnosis      99   108  Patients     186   194  ADMINISTERED_TO     168   \n",
+       "3  Diagnosis     213   222  Patients     185   193  ADMINISTERED_TO     194   \n",
+       "4  Diagnosis      51    60  Patients       0     8  ADMINISTERED_TO      40   \n",
+       "\n",
+       "   endr  text_id  weight evidence_source  \\\n",
+       "0   544        0     136         CORD-19   \n",
+       "1    91        1     136         CORD-19   \n",
+       "2   178        2     136         CORD-19   \n",
+       "3   203        3     136         CORD-19   \n",
+       "4    47        4     136         CORD-19   \n",
+       "\n",
+       "                                               info1       type1 identifier1  \\\n",
+       "0  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "1  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "2  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "3  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "4  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "\n",
+       "                                               info2          type2  \\\n",
+       "0  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "1  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "2  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "3  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "4  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "\n",
+       "  identifier2  \n",
+       "0    C0030705  \n",
+       "1    C0030705  \n",
+       "2    C0030705  \n",
+       "3    C0030705  \n",
+       "4    C0030705  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kg_df.head()"
    ]
   },
   {
