--- a/stage_4_data_integration/integrate_data_source.ipynb
+++ b/stage_4_data_integration/integrate_data_source.ipynb
@@ -124,8 +124,10 @@
     "    # get all IDs for ent1 and ent2 types from nodes_df\n",
     "    nodes_df = pd.read_csv(nodes_filename)\n",
     "    if ent1_type and ent2_type:\n",
-    "        ent1_all_ids = set(nodes_df[nodes_df[type_col] == ent1_type][identifier_col])\n",
-    "        ent2_all_ids = set(nodes_df[nodes_df[type_col] == ent2_type][identifier_col])\n",
+    "        ent1_all_ids = set(nodes_df.loc[nodes_df[type_col] == ent1_type, identifier_col])\n",
+    "        ent2_all_ids = set(nodes_df.loc[nodes_df[type_col] == ent2_type, identifier_col])\n",
+    "#         ent1_all_ids = set(nodes_df[nodes_df[type_col] == ent1_type][identifier_col])\n",
+    "#         ent2_all_ids = set(nodes_df[nodes_df[type_col] == ent2_type][identifier_col])\n",
     "    else:\n",
     "        ent1_all_ids = set(nodes_df[identifier_col])\n",
     "        ent2_all_ids = set(nodes_df[identifier_col])\n",
@@ -140,7 +142,7 @@
     "        weight_col_source = 'weight_col_source'\n",
     "        source_df[weight_col_source] = 0\n",
     "    \n",
-    "    edges_df = source_df[[ent1_col, ent2_col, weight_col_source]]\n",
+    "    edges_df = source_df.loc[:,[ent1_col, ent2_col, weight_col_source]]\n",
     "    edges_df.columns = [identifier_col_1, identifier_col_2, weight_col]\n",
     "    edges_df[source_col] = source\n",
     "    edges_df[\":TYPE\"] = relationship\n",
@@ -151,13 +153,14 @@
     "    # make sure columns in edges file output is in correct order\n",
     "    for col in header:\n",
     "        if not col in edges_df.columns:\n",
-    "            edges_df[col] = np.nan\n",
+    "            edges_df.loc[:,col] = np.nan\n",
+    "\n",
     "    edges_df = edges_df[header]\n",
-    "    edges_df = edges_df.drop_duplicates()\n",
+    "    edges_df.drop_duplicates(inplace=True)\n",
     "    edges_df = edges_df[edges_df[id_col_1] != edges_df[id_col_2]] # remove self loops\n",
     "    print(f'{len(edges_df)} edges added from source {source_filename}')\n",
     "    print()\n",
-    "    edges_df.to_csv(output_filename, mode='a', header=False, index=False)"
+    "    edges_df.to_csv(output_filename, mode='a', header=False, index=False)\n"
    ]
   },
   {
@@ -169,37 +172,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5812 edges added from source integration_data_processed/disease_gene_relationships.csv\n",
+      "5679 edges added from source integration_data_processed/disease_gene_relationships.csv\n",
       "\n",
-      "2450 edges added from source integration_data_processed/drug_gene_relationships.csv\n",
+      "2891 edges added from source integration_data_processed/drug_gene_relationships.csv\n",
       "\n",
-      "8760 edges added from source integration_data_processed/gene_gene_relationships.csv\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:49: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "21700 edges added from source integration_data_processed/gene_gene_relationships.csv\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:50: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "6837 edges added from source integration_data_processed/gene_GO_relationships.csv\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7607 edges added from source integration_data_processed/gene_GO_relationships.csv\n",
-      "\n",
-      "8035 edges added from source integration_data_processed/gene_phenotype_relationships.csv\n",
+      "7879 edges added from source integration_data_processed/gene_phenotype_relationships.csv\n",
       "\n",
       "1748 edges added from source integration_data_processed/disease_phenotype_relationships.csv\n",
       "\n"
@@ -224,70 +205,6 @@
     "\n",
     "# disease-phenotype relationships\n",
     "integrate_edgefile(header=header, nodes_filename=NODE_MAPPING_FILE_PATH, source_filename=os.path.join(DATA_DIR, 'disease_phenotype_relationships.csv'), output_filename=OUTPUT_FILE_PATH, ent1_type=None, ent1_col='CUI_disease', ent2_type=None, ent2_col='CUI_HPO', source='HPO', weight_col_source=None, weight_col=weight_col, processing_function=standardize_ents, source_col=source_col, identifier_col=identifier_col, id_col=id_col, type_col=type_col, relationship='disease-phenotype')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num relationships before integrating = 96108\n",
-      "num relationships added = 34373\n"
-     ]
-    }
-   ],
-   "source": [
-    "edges_df = pd.read_csv(OUTPUT_FILE_PATH)\n",
-    "\n",
-    "temp = edges_df[edges_df['evidence_source']=='CORD-19'][[id_col_1, rel_col, id_col_2]].drop_duplicates()\n",
-    "temp['triple'] = temp[id_col_1] + \"|\" + temp[rel_col] + '|' + temp[id_col_2]\n",
-    "triples_before_integration = set(temp['triple'])\n",
-    "\n",
-    "temp = edges_df[[id_col_1, rel_col, id_col_2]].drop_duplicates()\n",
-    "temp['triple'] = temp[id_col_1] + \"|\" + temp[rel_col] + '|' + temp[id_col_2]\n",
-    "triples_after_integration = set(temp['triple'])\n",
-    "\n",
-    "print('num relationships before integrating =', len(triples_before_integration))\n",
-    "new_triples_added = triples_after_integration.difference(triples_before_integration)\n",
-    "print('num relationships added =', len(new_triples_added)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "density before = 0.005220077130338432\n",
-      "density after = 0.007087036292958847\n",
-      "density increase (multiplication) = 1.3576497273900194\n"
-     ]
-    }
-   ],
-   "source": [
-    "nodes_df = pd.read_csv(NODE_MAPPING_FILE_PATH)\n",
-    "n = len(nodes_df)\n",
-    "PC = (n * (n-1))/2\n",
-    "density_before = (len(triples_before_integration) / PC) * 100\n",
-    "density_after = (len(triples_after_integration.union(triples_before_integration)) / PC) * 100\n",
-    "\n",
-    "print('density before =', density_before)\n",
-    "print('density after =', density_after)\n",
-    "print('density increase (multiplication) =', density_after/density_before)"
    ]
   },
   {
