--- a/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
+++ b/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "'[\"Activities & Behaviors\", \"Anatomy\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Chemicals & Drugs;Anatomy\", \"Chemicals & Drugs;Genes & Molecular Sequences\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Objects;Organizations\", \"Occupations\", \"Organizations\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
+       "'[\"Activities & Behaviors\", \"Anatomy\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Chemicals & Drugs;Anatomy\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Genes & Molecular Sequences;Chemicals & Drugs\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Objects;Organizations\", \"Occupations\", \"Organizations\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
       ]
      },
      "execution_count": 8,
@@ -227,13 +227,6 @@
     "evidence_sources = sorted(set(edges_df['evidence_source:STRING']))\n",
     "json.dumps(evidence_sources)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
